// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders basic panel 1`] = `
<div
  class="w-full h-full bg-white rounded-round"
>
  A basic Panel
</div>
`;

exports[`Renders panel with floating prop 1`] = `
<div
  class="w-full h-full bg-white rounded-default rounded-round shadow-panel"
>
  A floating Panel
</div>
`;
